# BoxPeer

./: .env-sample  .gitignore  Move.toml  README.md  SPECS.md  package-lock.json  package.json  vite.config.ts
.aptos/: config.yaml
.github/workflows/: tauri.yaml
move/: Move.toml  boogie.bpl
move/sources/: ownership.move
sources/: node.move  ownership.move  payment.move
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  peer_info.json  sqlite.db-shm  sqlite.db-wal  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: content.rs  lib.rs  main.rs  net.rs  network.rs  node.rs
src/components/: Analytics.tsx  Earnings.tsx  FileManagement.tsx  GoogleLogo.tsx  UploadContentForm.tsx
src/context/: PreviewContext.tsx
src/core/: constants.ts  contracts.ts  ephemeral.ts  keyless.ts  types.ts
src/pages/: CallbackPage.tsx  Content.tsx  ContentDetails.tsx  Home.tsx  HomePage.css  LoginPage.tsx  Nav.tsx  NetworkGraph.tsx  PeerDashboard.tsx  ProviderDashboard.tsx  Test.tsx  types.ts
src/utils/: addressUtils.ts  fileUtils.tsx  hashname.ts
