[package]
name = "BoxPeer"
version = "0.0.1"
description = "A decentralized peer-2-peer CDN"
authors = ["Prisca Chidimma"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
libp2p-kad = {version = "0.46" }
tokio = { version = "1", features = ["full"] }
lazy_static = {version = "1.4"}
futures = { version= "0.3" }
libp2p = { version = "0.54.1", features = ["mdns", "tokio", "gossipsub", "cbor", "dns", "kad", "noise", "macros", "request-response", "tcp", "websocket", "yamux"] }
libp2p-bitswap = { version = "0.25.1" }
tracing = { version = "0.1.40" }
libp2p-webrtc = {version = "0.8.0-alpha", features= ["tokio", "pem"] }
libp2p-webrtc-websys = "0.4.0-alpha"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
blockstore = {version = "0.7", features = ["sled"] }
sled = "0.34"
libp2p-identity = "0.2.9"
libipld = "0.16.0"
libp2p-core = "0.42.0"
rand = "0.8.5"
multihash-codetable = {version = "0.1", features = ["sha2"] }
bytes = "1"
beetswap = "=0.4.0"
subtle = "2.2.1"
cid = "0.11"
void = "1.0.2"
serde_json = "1"
devtools = "0.3.3"
matches = "0.1.10"
sha2 = "0.10.8"
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
hex = "0.4.3"
base64 = "0.22.1"
tokio-stream = "0.1.16"
anyhow = "1.0.86"
reqwest = { version = "0.12.8", features = ["json"] }
dirs = "5.0.1"

# [patch.crates-io]
# subtle = "=2.5.0"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
